apps/wsdjs_web/assets/css/search.css
/*******************************************/
/* search                                  */
/*******************************************/
.actions {
  display: flex;
  align-items: center;
  height: 48px;
}
.search-container {
  z-index: 49;
  pointer-events: none;
  position: relative;
  margin-right: auto;
}

.search-container.focused {
  flex-grow: 1;
  max-width: calc(20 * var(--line-height-base));
}

.search__input__wrap {
  position: relative;
  z-index: 2;
  transition: transform ease .1s;
  width: 100%;
  display: inline-flex;
  padding-top: 6px;
}

/* style the search input */
.search-input {
  position: relative;
  border: none;
  background-color: var(--bg-color);
  color: hsl(221, 15%, 41%);
  transform: translateY(0);
  transition: all ease .3s;
  pointer-events: auto;
  -webkit-appearance: none;
  padding: 6px 12px;
  display: block;
  width: 100%;
  height: 36px;
}
.search-input:focus {
  color: hsl(221, 15%, 41%);
  border-bottom: 2px solid  var(--accent-color);
  outline: none;
}


/* search results container */
.search-results-container {
  background-color: hsl(0, 0%, 100%);
  border-radius: 4px;
  position: absolute;
  overflow: hidden;
  box-shadow: 0 19px 38px hsla(0, 0%, 0%, 0.3), 0 19px 12px hsla(0, 0%, 0%, 0.22);
  pointer-events: none;
  opacity: 0;
  transform: translateY(-1px);
  transition: transform ease .1s,opacity ease .1s;
  z-index: 100;
}

.search-container.focused .search-results-container {
  pointer-events: auto;
  opacity: 1;
  transform: translateY(0);
  left: 0;
  top: 48px;
  width: 100%;
  max-height: 400px;
  overflow-y: auto;
}

.search-container.focused ~ a {
  display: none;
}

.search-results li:hover {
  transform: var(--accent-action);
  box-shadow: 0 2px 6px 0 hsla(0, 0%, 50%, .75);
}

